# sensor-tracking-gui

./: .env-example  .gitignore  README.md  check_env.py  main.java  pyproject.toml
docs/: LoRa_input_format.md
src/zenithgui/: main.py
src/zenithgui/assets/styles/: styles.qss
src/zenithgui/communication/: __init__.py  packet.py  sender.py  serial_reader.py  serial_simulation.py  serial_simulator.py
src/zenithgui/config/: __init__.py  config.py  env_config.py
src/zenithgui/controller/: __init__.py  main_controller.py
src/zenithgui/model/: ___init__.py  __init__.py  lora.py  main_model.py  telemetry.py
src/zenithgui/presenter/: __init__.py  main_presenter.py
src/zenithgui/util/: __init__.py  calc.py  path_utils.py
src/zenithgui/view/: __init__.py  custom_msg_box.py  graph.py  main_window.py
src/zenithgui/view/pages/: connection_page.py  dashboard_page.py
tests/: test_integration_backend.py
