[tool.poetry]
name = "zenithgui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
# >>> ADICIONE OU VERIFIQUE ESTA LINHA <<<
packages = [{include = "zenithgui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
pyqt6 = "^6.9.1"

[tool.poetry.scripts]
zenithgui = "zenithgui.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
