[tool.poetry]
name = "zenithgui"
version = "0.1.0"
description = ""
authors = ["vinicius-arg <j.vin7cius@gmail.com>", "Jvictor-19 <victor.pereira@dcomp.ufs.br>"]
readme = "README.md"
packages = [{ include = "zenithgui", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
pyqt5 = "^5.15.11"
pyqtgraph = "^0.13.7"
pyserial = "^3.5"

[tool.poetry.scripts]
zenithgui = "zenithgui.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
